espresso (0.99.45) UNRELEASED; urgency=low

  * Fix validation to accept hyphens in hostname (thanks, Alexandre Otto
    Strube; closes: Malone #39218).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 12 Apr 2006 03:26:18 +0100

espresso (0.99.44) dapper; urgency=low

  * GTK frontend:
    - Say "Selected region" rather than "Selected country".
    - Set default hostname to <username>-desktop or <username>-laptop
      depending on the result of laptop-detect, unless the hostname has been
      edited by hand.
    - Set initial language based on boot parameter from gfxboot or previous
      espresso run (closes: Malone #39051).
  * Depend on localechooser-data (>= 0.27ubuntu12) for a matching
    languagelist (closes: Malone #39043).
  * Silently skip languages rather than crashing if we can't find their
    language code.
  * Add ${shlibs:Depends} to espresso's and espresso-frontend-gtk's Depends
    (closes: Malone #39115).
  * Retranslate Cancel/Back/Forward buttons when changing language.
  * Update translations from Rosetta: Arabic, Czech, French, Hungarian,
    Lithuanian, Macedonian, Norwegian Bokmål, Dutch, Portuguese (Brazil),
    Tagalog, Ukrainian.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 11 Apr 2006 17:40:35 +0100

espresso (0.99.43) dapper; urgency=low

  [ Colin Watson ]
  * Add /cdrom/casper/filesystem.squashfs to the list of filesystem images
    we try to mount if casper didn't do it for us.
  * Use choose-mirror and apt-setup to set up a standard
    /etc/apt/sources.list.
  * GTK frontend:
    - Display more human-readable names for cities.
    - Display the selected country (using the existing iso-codes
      translations, which I hope should avoid most of the thorny
      geopolitical issues).
    - Stop depending on firefox; we don't display HTML any more.

  [ Jonathan Riddell ]
  * Make usersetup.py frontend independent
  * KDE Frontend:
    - Add user information validation
    - Implement basics of timezone selection